--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "expo": "~54.0.0",
     "expo-constants": "~18.0.10",
     "expo-status-bar": "~3.0.8",
