--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/native": "^7.1.21",
+    "@react-navigation/native-stack": "^7.8.0",
     "expo": "~54.0.0",
     "expo-constants": "~18.0.10",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0"
   },
   "devDependencies": {
-    "typescript": "5.2.2",
-    "@types/react": "19.1.10"
+    "@types/react": "19.1.10",
+    "typescript": "5.2.2"
   }
 }
